fix table dark mode

--- a/frontend/src/app/components/views/table-view/table-view.component.scss
+++ b/frontend/src/app/components/views/table-view/table-view.component.scss
@@ -23,10 +23,16 @@ tr.example-detail-row {
 
 tr.example-element-row:not(.example-expanded-row):hover {
   background: #f5f5f5;
+  .mat-cell {
+	color: black;
+  }
 }
 
 tr.example-element-row:not(.example-expanded-row):active {
   background: #efefef;
+  .mat-cell {
+	color: black;
+  }
 }
 
 .example-element-row td {
@@ -111,7 +117,7 @@ img {
   text-align: center;
 }
 
-.nothing-found{
+.nothing-found {
   margin-top: 10px;
   text-align: center;
   font-size: 25px;
